--- a/test.html
+++ b/test.html
@@ -2,13 +2,10 @@
 <html>
 <head>
     <title>My first Webpage</title>
+    <link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
-    <h1>This is just some text</h1>
-    <img src="kaneki.gif" alt="blehhhhh"> <br>
-    <a href="https://www.youtube.com/"> Youtube Link</a>
-
-    <h1>Registration Form</h1>
+        <h1>Registration Form</h1>
     <div id= "reg-form">
         <form action="" method="">
             <label for="First Name">First Name:</label>
